--- a/fires_sediment.ipynb
+++ b/fires_sediment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecbddcfd",
+   "id": "417ec6d0",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718e79c5",
+   "id": "9b241a1f",
    "metadata": {},
    "source": [
     "___\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bb90ca",
+   "id": "8b823fee",
    "metadata": {},
    "source": [
     "### Compare the sediment transport rate at the basin outlet to the  wildfire occurrence\n",
@@ -592,11 +592,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d2757fb",
+   "id": "b72ab33c",
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"flux-fire_example.png\" width=800>"
+    "<img src=\"flux-fire-example.png\" width=800>"
    ]
   },
   {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "c46b1b81",
+   "id": "3624e201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee27e21",
+   "id": "c28042fe",
    "metadata": {},
    "source": [
     "<video controls src=\"movie_example.mp4\" />"
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34423ccc",
+   "id": "1a01dd69",
    "metadata": {},
    "source": [
     "# make a movie to show how sediment fluxes evolve with time"
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "6fa64f76",
+   "id": "a125e5eb",
    "metadata": {},
    "outputs": [
     {
@@ -2567,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "b779c85f",
+   "id": "ddab823b",
    "metadata": {
     "scrolled": true
    },
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eabb305",
+   "id": "a6d5a20a",
    "metadata": {},
    "source": [
     "<video controls src=\"fluxmovie_example.mp4\" />"
@@ -2592,7 +2592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86056233",
+   "id": "a49b00b4",
    "metadata": {},
    "source": [
     "# Summary\n",
