fixed small bug with module name.

--- a/fires_sediment.ipynb
+++ b/fires_sediment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "417ec6d0",
+   "id": "c2a5a74e",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b241a1f",
+   "id": "b848a16e",
    "metadata": {},
    "source": [
     "___\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 408,
    "id": "29fb8c3e",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "from firemodel import *\n",
-    "from plotter import fireplot,fluxyplot\n",
+    "from fireplotter import fireplot,fluxyplot\n",
     "from create_network import create_network_from_raster\n",
     "from landlab.io.netcdf import (write_netcdf, read_netcdf)\n",
     "from landlab import (RasterModelGrid, imshow_grid)\n",
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b823fee",
+   "id": "717ea9a8",
    "metadata": {},
    "source": [
     "### Compare the sediment transport rate at the basin outlet to the  wildfire occurrence\n",
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b72ab33c",
+   "id": "420d1603",
    "metadata": {},
    "source": [
     "\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "3624e201",
+   "id": "7731a64e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28042fe",
+   "id": "72d1a774",
    "metadata": {},
    "source": [
     "<video controls src=\"movie_example.mp4\" />"
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a01dd69",
+   "id": "a3989ba1",
    "metadata": {},
    "source": [
     "# make a movie to show how sediment fluxes evolve with time"
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "a125e5eb",
+   "id": "4d1a059d",
    "metadata": {},
    "outputs": [
     {
@@ -2567,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "ddab823b",
+   "id": "18df9aa2",
    "metadata": {
     "scrolled": true
    },
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d5a20a",
+   "id": "06025904",
    "metadata": {},
    "source": [
     "<video controls src=\"fluxmovie_example.mp4\" />"
@@ -2592,7 +2592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a49b00b4",
+   "id": "beda817a",
    "metadata": {},
    "source": [
     "# Summary\n",
